Fix login format on smaller screens

--- a/style.css
+++ b/style.css
@@ -90,13 +90,9 @@ ul.tabs {
 }
 ul.tabs li{
   width: 50%;
-<<<<<<< HEAD
   background: #560000;
-=======
-	background: #560303;
->>>>>>> eb2ea497e045b07bd83dab1264b4da8271255625
 	display: inline-block;
-	padding: 10px 15px;
+	padding: 10px 5px;
 	cursor: pointer;
 }
 
